# bitdance-pc_metric

./: .gitignore  CMakeLists.txt
cmake/: BITDANCEConfig.h.in  BITDANCE_CompilerOptimizations.cmake  BITDANCE_Warnings.cmake  CMakeLists.gtest.txt.in  ExternalOpen3D.cmake
resources/: mpeg_pcc_metric.patch
source/: CMakeLists.txt  bitdance_pcqa.cpp  create_normals.cpp  optimize_voxel_size.cpp
tests/: CMakeLists.txt
tests/ThirdPartyLibs/: CMakeLists.txt  Open3DTests.cpp
